test/files/run/macro-system-properties.check

scala> import scala.language.experimental._, scala.reflect.macros.blackbox.Context
import scala.language.experimental._
import scala.reflect.macros.blackbox.Context

scala>     object GrabContext {
      def lastContext = Option(System.getProperties.get("lastContext").asInstanceOf[reflect.macros.runtime.Context])
      // System.properties lets you stash true globals (unlike statics which are classloader scoped)
      def impl(c: Context)() = { import c.universe._; System.getProperties.put("lastContext", c); c.Expr[Unit](q"()") }
      def grab(): Unit = macro impl
    }
<console>:19: error: macro implementation reference has wrong shape. required:
macro [<static object>].<method name>[[<type args>]] or
macro [<macro bundle>].<method name>[[<type args>]]
             def grab(): Unit = macro impl
                                      ^

scala>     object Test { class C(implicit a: Any) { GrabContext.grab } }
<console>:15: error: not found: value GrabContext
           object Test { class C(implicit a: Any) { GrabContext.grab } }
                                                    ^

scala>     object Test { class C(implicit a: Any) { GrabContext.grab } }
<console>:15: error: not found: value GrabContext
           object Test { class C(implicit a: Any) { GrabContext.grab } }
                                                    ^

scala> :quit
